# cogos-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  SECURITY_HARDENING_PLAN.md  STATE.md  STATE_2026_05_16.md  openapi.json  package-lock.json  package.json
data/: pentest-history.example.json
deploy/: README.md  cloud-init.yaml  provision.sh
docs/: RUNBOOK.md
scripts/: add-walkthrough-tier.sh  backup-data.sh  check-vendored.sh  cosign-password-to-kv.sh  cosign-regenerate.sh  cosign-setup.sh  cosign-upload-to-kv.sh  deploy-update.sh  escalation-rate-report.cjs  llm-search-bench.js  pentest-authed.sh  probes-all.sh  probes-image.sh  probes-unauth.js  probes-unauth.sh  release-node-sdk.sh  release-python-sdk.sh  revoke-leaked-key.sh  rotate-admin-key.sh  seed-pricing-2026-06-10.cjs  setup-monitoring.sh  smoke-api.sh  smoke-with-temp-key.sh
sdks/python/: .gitignore  README.md  RELEASING.md  pyproject.toml
sdks/python/cogos/: __init__.py  audit.py  client.py  errors.py  signing.py
sdks/python/tests/: conftest.py  fixtures.json  generate_fixtures.js  test_audit.py  test_client.py  test_signing.py
src/: analytics.js  anomaly.js  attestation.js  audit-checkpoint.js  auth.js  chat-api.js  cookbook.js  crm-webhook.js  crypto-sign.js  daily-cap.js  dashboard.js  dek.js  demo.js  early-adopter.js  escalation-learning.js  event-log.js  honeypot.js  index.js  internal-trust.js  key-state-store.js  keys.js  landing.js  legal.js  logger.js  magic-link.js  notify-signup.js  openai-compat.js  packages.js  rate-limit.js  sealed-audit.js  soc2.js  (+7 more)
(+133 files in other folders)
