[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogos"
version = "0.1.0"
description = "Python client for cogos.5ceos.com — schema-locked LLM inference with cryptographic response signing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "5CEOS Inc." }]
keywords = ["cogos", "llm", "inference", "hmac", "ed25519", "attestation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://cogos.5ceos.com"
Source = "https://github.com/5ceos/cogos-api"
Cookbook = "https://cogos.5ceos.com/cookbook"

[tool.setuptools.packages.find]
where = ["."]
include = ["cogos*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]
